Removing test, modification of pom.xml to allow upload. First try of upload csv

--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,12 @@
             <groupId>org.glassfish.jersey.inject</groupId>
             <artifactId>jersey-hk2</artifactId>
         </dependency>
+        
+        <dependency>
+			<groupId>com.sun.jersey.contribs</groupId>
+			<artifactId>jersey-multipart</artifactId>
+			<version>1.8</version>
+		</dependency>
     </dependencies>
 
     <build>
