--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
 
-    Copyright (c) 2011-2017 Oracle and/or its affiliates. All rights reserved.
+    Copyright (c) 2012-2017 Oracle and/or its affiliates. All rights reserved.
 
     The contents of this file are subject to the terms of either the GNU
     General Public License Version 2 only ("GPL") or the Common Development
@@ -51,50 +51,28 @@
         <version>2.26-b04</version>
     </parent>
 
-    <artifactId>helloworld-webapp</artifactId>
+    <artifactId>multipart-webapp</artifactId>
+    <name>jersey-examples-multipart-webapp</name>
     <packaging>war</packaging>
-    <name>jersey-examples-helloworld-webapp</name>
 
-    <description>Jersey annotated resource class "Hello world" example.</description>
+    <description>Jersey Multipart example.</description>
 
     <dependencies>
         <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>${servlet3.version}</version>
+            <groupId>org.glassfish.jersey.media</groupId>
+            <artifactId>jersey-media-multipart</artifactId>
         </dependency>
-
-        <dependency>
-            <groupId>org.glassfish.jersey.containers</groupId>
-            <artifactId>jersey-container-grizzly2-servlet</artifactId>
-        </dependency>
-
         <dependency>
             <groupId>org.glassfish.jersey.inject</groupId>
             <artifactId>jersey-hk2</artifactId>
         </dependency>
-        
-        <dependency>
-			<groupId>com.sun.jersey.contribs</groupId>
-			<artifactId>jersey-multipart</artifactId>
-			<version>1.8</version>
-		</dependency>
     </dependencies>
 
     <build>
         <plugins>
-            <!-- Run the application using "mvn jetty:run" to deploy to Jetty-->
             <plugin>
                 <groupId>org.mortbay.jetty</groupId>
                 <artifactId>maven-jetty-plugin</artifactId>
-            </plugin>
-            <!-- Run the application using "mvn exec:java" to deploy to Grizzly Servlet-->
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <configuration>
-                    <mainClass>org.glassfish.jersey.examples.helloworld.webapp.App</mainClass>
-                </configuration>
             </plugin>
         </plugins>
     </build>
