--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,11 @@
             <groupId>org.glassfish.jersey.inject</groupId>
             <artifactId>jersey-hk2</artifactId>
         </dependency>
+		<dependency>
+		    <groupId>org.glassfish.jersey.ext</groupId>
+		    <artifactId>jersey-mvc-jsp</artifactId>
+		    <version>2.25</version>
+		</dependency>
     </dependencies>
 
     <build>
